# stromalytix

./: .env.example  .gitignore  CELLAG_RESEARCH_CHECKLIST.md  CHANGELOG.md  CLAUDE.md  COPY_REVIEW.md  DEMO_SCRIPT.md  DEPLOY.md  DESIGN.md  OVERNIGHT_READY.md  PROGRESS.md  RALPH_LOOP.md  README.md  RESEARCH_CHECKLIST.md  STRATEGY.md  TABLES_2_5_GAP_ANALYSIS.md  UX_AND_STRATEGY_REVIEW.md  app.py  main.py  partner_app.py  pyproject.toml  requirements.txt  results_tab_renderers.py
.claude/: ralph-loop.local.md  settings.local.json
.github/workflows/: test.yml
.ralph/: ALTERNATIVE_WORKFLOWS.md  README.md  arc2_pi_sprint.md  arc2_pi_ui.md  arc2_pm4py_removal_v2.md  arc3_digital_twin_viz.md  arc3_further_reading.md  overnight_implementation.md
.streamlit/: config.toml
connectors/: base.py  crm_csv.py  eln_csv.py
core/: __init__.py  action_plan.py  cc3d_runner.py  cc3d_viz.py  chat.py  dlp_physics.py  doe.py  expand_action_plan.py  export.py  feasibility.py  fem_solver.py  ingest.py  knowledge_vault.py  kpi_dashboard.py  materials_intelligence.py  migration_insights.py  models.py  parameter_library.py  pi_chat.py  pi_ui.py  process_mining.py  rag.py  scaffold_geometry.py  synthetic_log_generator.py  tissue_viz.py  viz.py
data/: parameter_derivations.json  parameters_export.json
data/company_contexts/: centara_demo.json
data/gallery/: index.json
data/parameters/: adhesion.json  gel_penetration.json  o2_transport.json  proliferation.json  (+1 more)
scripts/: dev_loop.py  dev_loop.sh  embed_and_index.py  embed_public_data.py  fetch_public_data.py  generate_demo_data.py  generate_gallery.py  ralph_loop.py  scrape_cc3d_params.py  scrape_pubmed.py
tests/: BASELINE.md  conftest.py  test_apqc.py  test_cc3d_cloud.py  test_cc3d_runner.py  test_cc3d_viz.py  test_deployment.py  test_dlp_physics.py  test_export.py  test_export_viz.py  test_fem_solver.py  test_hepatic_intelligence.py  test_ingest.py  test_kb.py  test_kpi_dashboard.py  test_materials_intelligence.py  test_ooc_physics.py  test_overnight.py  test_partner_app.py  test_partner_config.py  test_partner_pdf.py  test_pi_chat.py  test_process_graph.py  test_process_mining.py  test_protocol_ingest.py  test_public_data.py  test_reading_db.py  test_sim_brief.py  test_tissue_viz.py
(+68 files in other folders)
